# function_approximators

./: CMakeLists.txt  package.xml
configs/: adaptative_tree.xml  dnn_approximator_trainer.json
examples/: fa_on_dataset.cpp  test_fa.cpp
include/rhoban_fa/: adaptative_tree.h  constant_approximator.h  dnn_approximator.h  dnn_approximator_trainer.h  fa_tree.h  fake_split.h  forest_approximator.h  forest_trainer.h  function_approximator.h  function_approximator_factory.h  gp.h  gp_forest.h  gp_forest_trainer.h  gp_trainer.h  linear_approximator.h  linear_split.h  optimizer_trainer.h  optimizer_trainer_factory.h  orthogonal_split.h  point_split.h  pwc_forest.h  pwc_forest_trainer.h  pwl_forest.h  pwl_forest_trainer.h  split.h  split_factory.h  trainer.h  trainer_factory.h
include/rhoban_fa/tools/: viewer.h
include/rosban_fa/: adaptative_tree.h  constant_approximator.h  dnn_approximator.h  dnn_approximator_trainer.h  fa_tree.h  factory.h  fake_split.h  forest_approximator.h  forest_trainer.h  function_approximator.h  function_approximator_factory.h  gp.h  gp_forest.h  gp_forest_trainer.h  gp_trainer.h  linear_approximator.h  linear_split.h  multi_dimensional_solver.h  optimizer_trainer.h  optimizer_trainer_factory.h  orthogonal_split.h  point_split.h  pwc_forest.h  pwc_forest_trainer.h  pwl_forest.h  pwl_forest_trainer.h  solver_factory.h  split.h  split_factory.h  tools.h  trainer.h  trainer_factory.h
include/rosban_fa/tools/: viewer.h
include/starkit_fa/: adaptative_tree.h  constant_approximator.h  dnn_approximator.h  dnn_approximator_trainer.h  fa_tree.h  fake_split.h  forest_approximator.h  forest_trainer.h  function_approximator.h  function_approximator_factory.h  gp.h  gp_forest.h  gp_forest_trainer.h  gp_trainer.h  linear_approximator.h  linear_split.h  optimizer_trainer.h  optimizer_trainer_factory.h  orthogonal_split.h  point_split.h  pwc_forest.h  pwc_forest_trainer.h  pwl_forest.h  pwl_forest_trainer.h  split.h  split_factory.h  trainer.h  trainer_factory.h
include/starkit_fa/tools/: viewer.h
src/: test_io.cpp  test_optimizer_trainer.cpp  viewer.cpp
src/rhoban_fa/: adaptative_tree.cpp  constant_approximator.cpp  dnn_approximator.cpp  dnn_approximator_trainer.cpp  fa_tree.cpp  fake_split.cpp  forest_approximator.cpp  forest_trainer.cpp  function_approximator.cpp  function_approximator_factory.cpp  gp.cpp  gp_forest.cpp  gp_forest_trainer.cpp  gp_trainer.cpp  linear_approximator.cpp  linear_split.cpp  optimizer_trainer.cpp  optimizer_trainer_factory.cpp  orthogonal_split.cpp  point_split.cpp  pwc_forest.cpp  pwc_forest_trainer.cpp  pwl_forest.cpp  pwl_forest_trainer.cpp  sources.cmake  split.cpp  split_factory.cpp  trainer.cpp  trainer_factory.cpp
src/rhoban_fa/tools/: viewer.cpp
src/rosban_fa/: adaptative_tree.cpp  constant_approximator.cpp  dnn_approximator.cpp  dnn_approximator_trainer.cpp  fa_tree.cpp  factory.cpp  fake_split.cpp  forest_approximator.cpp  forest_trainer.cpp  function_approximator.cpp  function_approximator_factory.cpp  gp.cpp  gp_forest.cpp  gp_forest_trainer.cpp  gp_trainer.cpp  linear_approximator.cpp  linear_split.cpp  optimizer_trainer.cpp  optimizer_trainer_factory.cpp  orthogonal_split.cpp  point_split.cpp  pwc_forest.cpp  pwc_forest_solver.cpp  pwc_forest_trainer.cpp  pwl_forest.cpp  pwl_forest_trainer.cpp  solver_factory.cpp  sources.cmake  split.cpp  split_factory.cpp  tools.cpp  trainer.cpp  trainer_factory.cpp
src/rosban_fa/tools/: viewer.cpp
src/starkit_fa/: adaptative_tree.cpp  constant_approximator.cpp  dnn_approximator.cpp  dnn_approximator_trainer.cpp  fa_tree.cpp  fake_split.cpp  forest_approximator.cpp  forest_trainer.cpp  function_approximator.cpp  function_approximator_factory.cpp  gp.cpp  gp_forest.cpp  gp_forest_trainer.cpp  gp_trainer.cpp  linear_approximator.cpp  linear_split.cpp  optimizer_trainer.cpp  optimizer_trainer_factory.cpp  orthogonal_split.cpp  point_split.cpp  pwc_forest.cpp  pwc_forest_trainer.cpp  pwl_forest.cpp  pwl_forest_trainer.cpp  sources.cmake  split.cpp  split_factory.cpp  trainer.cpp  trainer_factory.cpp
src/starkit_fa/tools/: sources.cmake  viewer.cpp
