<?xml version="1.0"?>
<package>
  <name>rhoban_fa</name>
  <version>0.0.0</version>
  <description>This package contains several function approximators and a factory to build them</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rhoban_regression_forests</build_depend> <!-- rhoban/regression_forests.git -->
  <build_depend>rhoban_bbo</build_depend> <!-- rhoban/bbo.git -->
  <build_depend>tiny-dnn</build_depend> <!-- optional rhobandeps/tiny-dnn.git -->
  <build_depend>rhoban_viewer</build_depend> <!-- optional rhoban/viewer.git -->

  <run_depend>rhoban_regression_forests</run_depend>
  <run_depend>rhoban_bbo</run_depend>
  <run_depend>tiny-dnn</run_depend>
  <run_depend>rhoban_viewer</run_depend>

  <export/>
</package>
