<?xml version="1.0"?>
<package>
  <name>rhoban_fa</name>
  <version>0.0.0</version>
  <description>This package contains several function approximators and a factory to build them</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rhoban_regression_forests</build_depend> <!-- StarkitRobots/regression_forests.git -->
  <build_depend>rhoban_bbo</build_depend> <!-- StarkitRobots/bbo.git -->
  <build_depend>tiny-dnn</build_depend> <!-- optional StarkitRobots/tiny-dnn.git -->
  <build_depend>rhoban_viewer</build_depend> <!-- optional StarkitRobots/viewer.git -->

  <run_depend>starkit_regression_forests</run_depend>
  <run_depend>starkit_bbo</run_depend>
  <run_depend>tiny-dnn</run_depend>
  <run_depend>starkit_viewer</run_depend>

  <export/>
</package>
